infra/modules/alb/main.tf
####################################
# ALB Security Group
####################################

resource "aws_security_group" "alb" {

  name        = "${var.project_name}-${var.environment}-alb-sg"
  description = "Security Group for ALB"
  vpc_id      = var.vpc_id

  ingress {

    description = "HTTP"

    from_port = 80

    to_port = 80

    protocol = "tcp"

    cidr_blocks = ["0.0.0.0/0"]

  }

  ingress {

    description = "HTTPS"

    from_port = 443

    to_port = 443

    protocol = "tcp"

    cidr_blocks = ["0.0.0.0/0"]

  }

  egress {

    from_port = 0

    to_port = 0

    protocol = "-1"

    cidr_blocks = ["0.0.0.0/0"]

  }

  tags = {

    Name = "${var.project_name}-${var.environment}-alb-sg"

  }

}

####################################
# Application Load Balancer
####################################

resource "aws_lb" "this" {

  name               = "${var.project_name}-${var.environment}-alb"

  internal           = false

  load_balancer_type = "application"

  security_groups    = [aws_security_group.alb.id]

  subnets            = var.public_subnet_ids

  enable_deletion_protection = false

  tags = {

    Name = "${var.project_name}-${var.environment}-alb"

  }

}

####################################
# Target Group
####################################

resource "aws_lb_target_group" "this" {

  name = "${var.project_name}-${var.environment}-tg"

  port = 80

  protocol = "HTTP"

  target_type = "ip"

  vpc_id = var.vpc_id

  health_check {

    enabled = true

    path = "/"

    interval = 30

    timeout = 5

    healthy_threshold = 2

    unhealthy_threshold = 2

    matcher = "200"

  }

}

####################################
# Listener
####################################

resource "aws_lb_listener" "http" {

  load_balancer_arn = aws_lb.this.arn

  port = 80

  protocol = "HTTP"

  default_action {

    type = "forward"

    target_group_arn = aws_lb_target_group.this.arn

  }

}
